<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurfaceContainerHigh"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <TextView
        style="@style/Text.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_lg"
        android:text="@string/action_connect_by_ip" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.FastTransfer.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receive_address_title"
        app:boxBackgroundColor="@android:color/transparent"
        app:helperText="@string/receive_address_hint"
        app:startIconDrawable="@drawable/ic_link">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:textSize="@dimen/text_body_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.FastTransfer.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:hint="@string/settings_port"
        app:boxBackgroundColor="@android:color/transparent"
        app:helperText="@string/settings_port_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ip_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:textSize="@dimen/text_body_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ip_cancel"
            style="@style/Widget.FastTransfer.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_sm"
            android:text="@string/action_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ip_connect"
            style="@style/Widget.FastTransfer.Button.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="112dp"
            android:text="@string/action_confirm" />
    </LinearLayout>
</LinearLayout>
